--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ p{font-family:fantasy;}
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <br>instagram:
-<br> <a href="https://www.instagram.com/fikrimulyana_s/">@fikrimulyana_s</a>
+<br> <a href="https://www.instagram.com/fikrimulyana_s/">@fikrimulyana_s
+<img scr="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
 </p>
