--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p{font-family:fantasy;}
 <h1 align="center">fikri notes</h1>
 </header>
 <h2 align="center"><em><strong>tentang developer:</strong></em></h2>
-<img scr="https://www.picterio.com/media/2134840005657600665_10613795503">
+<img src="https://www.picterio.com/media/2134840005657600665_10613795503">
 <br>
 <p align="center">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
@@ -27,7 +27,7 @@ p{font-family:fantasy;}
 <br><strong>contact:</strong>
 <br>instagram:
 <br> <a href="https://www.instagram.com/fikrimulyana_s/">@fikrimulyana_s
-<img scr="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
+<img src="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
 </p>
