--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p{font-family:fantasy;}
 <h1 align="center">fikri notes</h1>
 </header>
 <h2 align="center"><em><strong>tentang developer:</strong></em></h2>
-<img src="https://www.picterio.com/media/2134840005657600665_10613795503">
+<img src="IMG_20200204_192726.JPG">
 <br>
 <p align="center">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
