--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ p{font-family:fantasy;}
 <header>
 <h1 align="center">fikri notes</h1>
 </header>
-<h2 align="center"><em><strong>tentang developer:</strong></em></h2>
+<h2 align="left"><em><strong>tentang developer:</strong></em></h2>
 <img src="IMG_20200204_192726.JPG" align="middle" border="5"/>
 <br>
-<p align="center">nama:fikri mulyana setiawan
-<br>sekolah:SMAN NEGERI 4 PADANG
+<p align="left">nama:fikri mulyana setiawan
+sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <br>instagram:
