--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p{font-family:fantasy;}
 <h1 align="center">fikri notes</h1>
 </header>
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
-<img src="IMG_20200204_192726.JPG" align="middle" border="5"/>
+<img src="IMG_20200204_192726.JPG" border="5"/>
 <br>
 <p align="left">nama:fikri mulyana setiawan
 sekolah:SMAN NEGERI 4 PADANG
