--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ sekolah:SMAN NEGERI 4 PADANG
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
 </p>
+<footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p>
+</footer>
 
 </body>
 
