--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
 h1{font-size:250px;}
 h2{font-size:100px;}
-p{font-size:75;}
-p{font-family:fantasy;}
+p1{font-size:75;}
+p1{font-family:fantasy;}
+p2{font-size:30;}
 </style>
 <body>
 <header>
@@ -21,7 +22,7 @@ p{font-family:fantasy;}
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
 <img src="IMG_20200204_192726.JPG" border="5"/>
 <br>
-<p align="left">nama:fikri mulyana setiawan
+<p1 align="left">nama:fikri mulyana setiawan
 sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
@@ -30,8 +31,8 @@ sekolah:SMAN NEGERI 4 PADANG
 <img src="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
-</p>
-<footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p>
+</p1>
+<footer><p2 align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p2>
 </footer>
 
 </body>
