--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
 h1{font-size:250px;}
 h2{font-size:100px;}
-p1{font-size:75;}
+p1{font-size:75px;}
 p1{font-family:fantasy;}
-p2{font-size:30;}
+p2{font-size:25px;}
 </style>
 <body>
 <header>
