--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
 h1{font-size:250px;}
 h2{font-size:100px;}
-p1{font-size:75px;}
+p1{font-size:75;}
 p1{font-family:fantasy;}
-p2{font-size:25px;}
+p{font-size:8px;}
 </style>
 <body>
 <header>
@@ -32,7 +32,7 @@ sekolah:SMAN NEGERI 4 PADANG
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
 </p1>
-<footer><p2 align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p2>
+<footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p>
 </footer>
 
 </body>
