--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ sekolah:SMAN NEGERI 4 PADANG
 <br>email:
 <br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
 </p1>
-<footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya</a></p>
+<footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya-->></a></p>
 </footer>
 
 </body>
