--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ sekolah:SMAN NEGERI 4 PADANG
 <br> <a href="https://www.instagram.com/fikrimulyana_s/">@fikrimulyana_s
 <img src="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
 <br>email:
-<br> <a href="mailto:fikrimulyanasetiawan@gmail.com">fikrimulyanasetiawan@gmail.com</a>
+<br> <a href="mailto:fikrimulyanasetiawan@gmail.com">img src="images.png"</a>
 </p1>
 <footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya-->></a></p>
 </footer>
