--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@ sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <br>instagram:
-<br> <a href="https://www.instagram.com/fikrimulyana_s/">@fikrimulyana_s
-<img src="https://www.freepnglogos.com/images/instagram-logo-png-2428.html"></a>
+<br> <a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg"></a>
 <br>email:
-<br> <a href="mailto:fikrimulyanasetiawan@gmail.com">img src="images.png"</a>
+<br> <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images(1).jpeg"></a>
 </p1>
 <footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya-->></a></p>
 </footer>
