--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ h2{font-size:100px;}
 p1{font-size:75;}
 p1{font-family:fantasy;}
 p{font-size:8px;}
+
 </style>
 <body>
 <header>
@@ -27,9 +28,9 @@ sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <br>instagram:
-<br> <a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg"></a>
+<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height="12"></a>
 <br>email:
-<br> <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images(1).jpeg"></a>
+<br> <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height="12"></a>
 </p1>
 <footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya-->></a></p>
 </footer>
