--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@ p{font-size:8px;}
 sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
-<br>instagram:
-<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height="30"></a>
-<br>email:
-<br> <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height="30"></a>
+
+<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height="60"></a>
+<a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height="60"></a>
 </p1>
 <footer><p align="right"><a href="fikrimulyana.github.io">ketuk disini untuk melihat website pertama saya-->></a></p>
 </footer>
