--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p{font-size:8px;}
 <img src="IMG_20200204_192726.JPG" border="5"/>
 <br>
 <p1 align="left">nama:fikri mulyana setiawan
-sekolah:SMAN NEGERI 4 PADANG
+<br>sekolah:SMAN NEGERI 4 PADANG
 <br>hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 
