--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <style>
 body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
-h1{font-size:100px;}
+h1{font-size:250px;}
 h2{font-size:75px;}
-p1{font-size:75;}
+p1{font-size:25px;}
 p1{font-family:fantasy;}
-p{font-size:8px;}
+p{font-size:12px;}
 
 </style>
 <body>
@@ -21,7 +21,7 @@ p{font-size:8px;}
 <h1 align="center">fikri notes</h1>
 </header>
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
-<img src="IMG_20200204_192726.JPG" border="5" height="300"/>
+<img src="IMG_20200204_192726.JPG" border="5" height="600"/>
 <br>
 <p1 align="left">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
