--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ p{font-size:12px;}
 <header>
 <h1 align="center">fikri notes</h1>
 </header>
+<nav>
+<ul>
+<li><a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk">soal SAT matematika</a></li>
+</ul>
+</nav>
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
 <img src="IMG_20200204_192726.JPG" border="5" height="400"/>
 <br>
