--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ p{font-size:12px;}
 <h1 align="center">fikri notes</h1>
 </header>
 <nav>
-<a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk">soal SAT matematika</a>
-<a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk">soal OSK fisika tahun 2020</a>
+<a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
+<a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a>
 </nav>
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
 <img src="IMG_20200204_192726.JPG" border="5" height="400"/>
