--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@ p{font-size:12px;}
 <h1 align="center">fikri notes</h1>
 </header>
 <nav>
+<table border="2">
+<tr>
+<td>
 <a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
 <a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a>
+</td>
+</tr>
+<tr>
+<td>
+<a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a>
+<a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a>
+</td>
+</tr>
+</table>
 </nav>
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
 <img src="IMG_20200204_192726.JPG" border="5" height="400"/>
