--- a/index.html
+++ b/index.html
@@ -25,13 +25,23 @@ p{font-size:12px;}
 <tr>
 <td>
 <a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
+</td>
+<td>
 <a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a>
+</td>
+<td>
+<a href="https://drive.google.com/file/d/1EEgayg5r-oA10aZ3dkh_yPmNeHWcfIj2/view?usp=drivesdk">soal UEE fisika NTU 2019</a>
 </td>
 </tr>
 <tr>
 <td>
 <a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a>
+</td>
+<td>
 <a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a>
+</td>
+<td>
+<a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a>
 </td>
 </tr>
 </table>
