--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ p{font-size:12px;}
 <h1 align="center">fikri notes</h1>
 </header>
 <nav>
-<table border="2">
+<p2>tekan untuk melihat:</p2>
+<table border="5">
 <tr>
 <td>
 <a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
