--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ table{font-size:20px;}
 <p2>tekan untuk melihat:</p2>
 <table border="5">
 <tr>
+<td><a href="index(1).html">home</a></td>
 <td>
 <a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
 </td>
