--- a/index(1).html
+++ b/index(1).html
@@ -4,11 +4,24 @@
 <title>kumpulan soal</title>
 </head>
 <style>
-p1{font-size:75px;}
+p1{font-size:100px;}
+p1{font-family:cursive;}
+p2{font-size:13px;}
+p3{font-size:13px;}
+body{background-color:rgb(66,177,237);}
 </style>
 <body>
 <header>
-<p1>kumpulan soal</p1>
+<p1>fikri notes</p1>
 </header>
+<h3>berikut kumpulan soal soal latihan:</h3>
+<p2>
+<a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a><br>
+<a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a><br>
+<a href="https://drive.google.com/file/d/1EEgayg5r-oA10aZ3dkh_yPmNeHWcfIj2/view?usp=drivesdk">soal UEE fisika NTU 2019</a><br>
+<a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a><br>
+<a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a><br>
+<a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a></p2>
+<footer><p3><a href="index.html">kembali ke halaman utama<a></p3></footer>
 </body>
 </html>
