--- a/index(1).html
+++ b/index(1).html
@@ -6,13 +6,15 @@
 <style>
 p1{font-size:100px;}
 p1{font-family:cursive;}
-p2{font-size:13px;}
-p3{font-size:13px;}
+p2{font-size:18px;}
+p3{font-size:18px;}
+ p2{font-family:fantasy;}
+p3{font-family:fantasy;}  
 body{background-color:rgb(66,177,237);}
 </style>
 <body>
 <header>
-<p1>fikri notes</p1>
+<p1 align="center">fikri notes</p1>
 </header>
 <h3>berikut kumpulan soal soal latihan:</h3>
 <p2>
@@ -22,6 +24,6 @@ body{background-color:rgb(66,177,237);}
 <a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a><br>
 <a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a><br>
 <a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a></p2>
-<footer><p3><a href="index.html">kembali ke halaman utama<a></p3></footer>
+<footer><p3><a href="index.html">kembali ke halaman utama</a></p3></footer>
 </body>
 </html>
