--- a/index(1).html
+++ b/index(1).html
@@ -7,7 +7,7 @@
 p1{font-size:100px;}
 p1{font-family:cursive;}
 p2{font-size:18px;}
-p3{font-size:18px;}
+p{font-size:18px;}
  p2{font-family:fantasy;}
 p3{font-family:fantasy;}  
 body{background-color:rgb(66,177,237);}
@@ -24,6 +24,10 @@ body{background-color:rgb(66,177,237);}
 <a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a><br>
 <a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a><br>
 <a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a></p2>
-<footer><p3><a href="index.html">kembali ke halaman utama</a></p3></footer>
+<footer>
+<p align="right">
+<a href="index.html">kembali ke halaman utama</a>
+</p>
+</footer>
 </body>
 </html>
