--- a/index(1).html
+++ b/index(1).html
@@ -4,17 +4,17 @@
 <title>kumpulan soal</title>
 </head>
 <style>
-p1{font-size:100px;}
+h1{font-size:100px;}
 p1{font-family:cursive;}
 p2{font-size:18px;}
-p{font-size:18px;}
+p{font-size:13px;}
  p2{font-family:fantasy;}
 p3{font-family:fantasy;}  
 body{background-color:rgb(66,177,237);}
 </style>
 <body>
 <header>
-<p1 align="center">fikri notes</p1>
+<h1 align="center">fikri notes</h1>
 </header>
 <h3>berikut kumpulan soal soal latihan:</h3>
 <p2>
