--- a/index(1).html
+++ b/index(1).html
@@ -5,7 +5,7 @@
 </head>
 <style>
 h1{font-size:100px;}
-p1{font-family:cursive;}
+h1{font-family:cursive;}
 p2{font-size:18px;}
 p{font-size:13px;}
  p2{font-family:fantasy;}
@@ -26,7 +26,7 @@ body{background-color:rgb(66,177,237);}
 <a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a></p2>
 <footer>
 <p align="right">
-<a href="index.html">kembali ke halaman utama</a>
+<a href="index.html">kembali ke halaman utama->></a>
 </p>
 </footer>
 </body>
