--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ table{font-size:20px;}
 <td>
 <a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
 </td>
+<td><a href="index(2).html">pemograman python</a></td>
 <td>
 <a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a>
 </td>
