--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ table{font-size:20px;}
 
 </style>
 <body>
+<script type="text/javascript">
+alert('fikri mulyana')
+</script>
 <header>
 <h1 align="center">fikri notes</h1>
 </header>
