--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@ table{font-size:20px;}
 </style>
 <body>
 <script type="text/javascript">
-alert('fikri mulyana')
+alert('my name is fikri mulyana setiawan')
 </script>
+<script type="text/python" src="program.py"></script>
 <header>
 <h1 align="center">fikri notes</h1>
 </header>
