--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@ table{font-size:20px;}
 
 </style>
 <body>
-<script type="text/javascript">
-alert('my name is fikri mulyana setiawan')
+<script type="text/python">
+alert(program.py)
 </script>
-<script type="text/python" src="program.py"></script>
 <header>
 <h1 align="center">fikri notes</h1>
 </header>
