--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>website fikri mulyana setiawan</title>
-<script>
+<script type="text/javascript">
 document.getElemenById("contoh").innerHTML="fikrifikrifikrifikri";
 </script>
 </head>
