--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ table{font-size:20px;}
 <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height="80"></a>
 </p1>
 <script type="text/javascript">
-document.getElemenById("contoh").innerHTML="fikrifikrifikrifikri";
+document.getElemenById('contoh').innerHTML="fikrifikrifikrifikri";
 </script>
 
 </body>
