--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ table{font-size:20px;}
 </nav>
 
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
-<img src="IMG_20200204_192726.JPG" border="5" height="400"/>
+<img src="FB_IMG_1591675852359.jpg" border="5" height="400"/>
 <br>
 <p1 align="left">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
