--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>website fikri mulyana setiawan</title>
 </head>
 <style>
+a{text-decorate:none;}
 body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
 h1{font-size:250px;}
