--- a/Calculus.html
+++ b/Calculus.html
@@ -24,7 +24,8 @@
   
   <article>
     <h4><b>subjek:matematika</b> <br />
-    <b>materi:kalkulus</b></h4>
+    <b>materi:kalkulus</b><br/>
+    <b>oleh:Fikri Mulyana Setiawan</b></h4>
     <p>hallo semuanya!!</p>
     <p align="" class="paragraf1">
       Sebagian dari kalian mungkin sudah tau bahwa turunan(diferensial) dari persamaan $y=e^x$ akan menghasilkan $e^x$ juga,tapi kenapa begitu? nah,disini kita akan membahasnya bersama-sama
