--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ table{font-size:20px;}
 </td>
 </tr>
 <tr>
-  <td><a href="Calculus.html"</td>
+  <td><a href="Calculus.html">kalkulus</a></td>
 </tr>
 </table>
 </nav>
