--- a/Calculus.html
+++ b/Calculus.html
@@ -28,7 +28,7 @@
     <b>oleh:Fikri Mulyana Setiawan</b></h4>
     <p>hallo semuanya!!</p>
     <p align="" class="paragraf1">
-      Sebagian dari kalian mungkin sudah tau bahwa turunan(diferensial) dari persamaan $y=e^x$ akan menghasilkan $e^x$ juga,tapi kenapa begitu? nah,disini kita akan membahasnya bersama-sama
+      Konstanta euler ($e^x$) adalah salah satu konstanta yang unik dalam matematika.konstanta ini banyak dipakai dalam bidang pengetahuan seperti fisika,ekonomi,dan sebagainya.Selain itu ada keunikan lain,yaitu turunan (diferensial) dari persamaan $y=e^x$ akan menghasilkan $e^x$ juga,tapi kenapa begitu? nah,disini kita akan membahasnya bersama-sama
     </p>
     
     <p>
