--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 
 <head>
 <meta charset="utf-8">
+meta name="viewport" content="width=device-width, initial-scale=1">
 <title>website fikri mulyana setiawan</title>
 </head>
 <style>
 a{text-decoration:none;}
 body{background-color: rgb(245,189,19);}
 h1{font-family:cursive;}
-h1{font-size:250px;}
-h2{font-size:50px;}
-p1{font-size:18px;}
 p1{font-family:fantasy;}
-p{font-size:12px;}
-table{font-size:20px;}
+
 
 </style>
 <body>
@@ -47,15 +44,13 @@ table{font-size:20px;}
 <td>
 <a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a>
 </td>
-</tr>
-<tr>
   <td><a href="Calculus.html">kalkulus</a></td>
 </tr>
 </table>
 </nav>
 
 <h2 align="left"><em><strong>tentang developer:</strong></em></h2>
-<img src="FB_IMG_1591675852359.jpg" border="5" height="400"/>
+<img src="FB_IMG_1591675852359.jpg" border="5" style="border-radius:50%;"/>
 <br>
 <p1 align="left">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
