--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>website fikri mulyana setiawan</title>
 </head>
 <style>
@@ -49,8 +49,8 @@ p1{font-family:fantasy;}
 </table>
 </nav>
 
-<h2 align="left"><em><strong>tentang developer:</strong></em></h2>
-<img src="FB_IMG_1591675852359.jpg" border="5" style="border-radius:50%;"/>
+<h2 align="right"><em><strong>tentang developer:</strong></em></h2>
+<p align="center" ><img src="FB_IMG_1591675852359.jpg" border="5" style="border-radius:50%;"/></p>
 <br>
 <p1 align="left">nama:fikri mulyana setiawan
 <br>sekolah:SMAN NEGERI 4 PADANG
