--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ p1{font-family:fantasy;}
 </nav>
 
 <h2 align="right"><em><strong>tentang developer:</strong></em></h2>
-<p align="center" ><img src="FB_IMG_1591675852359.jpg" border="5" style="border-radius:50%;" height=200px /></p>
+<p align="center" ><img src="FB_IMG_1591675852359.jpg style="border-radius:50%;" height=250px /></p>
 <br>
-<p1 align="left">nama:fikri mulyana setiawan
-<br>sekolah:SMAN NEGERI 4 PADANG
-<br>hobi:coding,belajar fisika
+<p1 align="left">Nama:Fikri Mulyana Setiawan
+<br>Sekolah:SMAN NEGERI 4 PADANG
+<br>Hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <p id="contoh"></p>
 <br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height="80"></a>
