--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ p1{font-family:fantasy;}
 </nav>
 
 <h2 align="right"><em><strong>tentang developer:</strong></em></h2>
-<p align="center" ><img src="FB_IMG_1591675852359.jpg style="border-radius:50%;" height=250px /></p>
+<p align="center" ><img src="FB_IMG_1591675852359.jpg" style="border-radius:50%;" height=250px /></p>
 <br>
 <p1 align="left">Nama:Fikri Mulyana Setiawan
 <br>Sekolah:SMAN NEGERI 4 PADANG
