--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="shortcut icon" href="logo7_30_221819.png>
+<link rel="icon" href="logo7_30_221819.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>website fikri mulyana setiawan</title>
