--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ p1{font-family:fantasy;}
 <br>Hobi:coding,belajar fisika
 <br><strong>contact:</strong>
 <p id="contoh"></p>
-<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height="80"></a>
-<a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height="80"></a>
+<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height=40px></a>
+<a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height=40px></a>
 </p1>
 <script type="text/javascript">
 document.getElemenById('contoh').innerHTML="fikrifikrifikrifikri";
