--- a/Calculus.html
+++ b/Calculus.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" type="jpg" href="/fotoprofil.jpg"/>
+  <link rel="icon" href="IMG_20200730_223215.JPG">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kalkulus</title>
