--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <style>
 a{text-decoration:none;}
 body{background-color: rgb(245,189,19);}
-h1{font-family:cursive;}
+h1{font-family:cursive;
+background-color:black;}
 p1{font-family:fantasy;}
 
 
 </style>
 <body>
 <header>
-<h1 align="center">fikri notes</h1>
+<h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header>
 <nav>
 <p2>tekan untuk melihat:</p2>
