--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <style>
 a{text-decoration:none;}
-body{background-color: rgb(245,189,19);}
+body{background-color:white;}
 h1{font-family:cursive;
-background-color:black;}
+background-color:white;}
 p1{font-family:fantasy;}
 
 
