--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <style>
 a{text-decoration:none;}
-body{background-color:white;}
+body{
+  background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
+  background-repeat: no-repeat;
+  }
 h1{font-family:cursive;
-background-color:white;}
+
 p1{font-family:fantasy;}
 
 
