--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body{
   background-repeat: no-repeat;
   }
 h1{font-family:cursive;
+p{border-color:#00FF00;}
 
 p1{font-family:fantasy;}
 
@@ -23,36 +24,10 @@ p1{font-family:fantasy;}
 <header>
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header>
-<nav>
-<p2>tekan untuk melihat:</p2>
-<table border="5">
-<tr>
-<td><a href="index(1).html">kumpulan soal</a></td>
-<td>
-<a href="https://drive.google.com/file/d/1EI3uKXdAkO43Ufy6a-D5ELtn1dVeLqRX/view?usp=drivesdk" border="5">soal SAT matematika</a>
-</td>
-<td><a href="index(2).html">pemograman python</a></td>
-<td>
-<a href="https://drive.google.com/file/d/1-WBWAgV-tbIK1HARyHpyN8oZ4PyO5wf8/view?usp=drivesdk" border="5">soal OSK fisika tahun 2020</a>
-</td>
-</tr>
-<tr>
-<td>
-<a href="https://drive.google.com/file/d/17D-xuxfdS4I-Ok_9WmV8JAhMIKXymoE5/view?usp=drivesdk">soal olimpiade fisika</a>
-</td>
-<td>
-<a href="https://drive.google.com/file/d/1Rm6yeWpCpkLdjrho6vrMQkuUW6b0MMoa/view?usp=drivesdk">soal teori IPhO</a>
-</td>
-<td>
-<a href="https://drive.google.com/file/d/1-WShmgT70ZYf_3TBEM7AYAfjiY3gPUWv/view?usp=drivesdk">soal UEE matematika NTU</a>
-</td>
-  <td><a href="Calculus.html">kalkulus</a></td>
-</tr>
-</table>
-</nav>
+
 
 <h2 align="center"><em><strong>tentang developer:</strong></em></h2>
-<p align="center"><img src="FB_IMG_1591675852359.jpg" style="border-radius:50%;" height=250px /></p>
+<p align="center"><img src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
 <br>
 <p1 align="left">Nama:Fikri Mulyana Setiawan
 <br>Sekolah:SMAN NEGERI 4 PADANG
