--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ body{
   background: -webkit-linear-gradient(bottom, #0033FF, #00FFFF);
   background-repeat: no-repeat;
   }
-h1{font-family:cursive;
-p{border-color:#00FF00;}
 
+#fotoprofil{border-color:#00FF00;}
 p1{font-family:fantasy;}
 
 
@@ -27,7 +26,7 @@ p1{font-family:fantasy;}
 
 
 <h2 align="center"><em><strong>tentang developer:</strong></em></h2>
-<p align="center"><img src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
+<p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
 <br>
 <p1 align="left">Nama:Fikri Mulyana Setiawan
 <br>Sekolah:SMAN NEGERI 4 PADANG
