--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{
   background-repeat: no-repeat;
   }
 
-#fotoprofil{border-color:#0000CC;}
+#fotoprofil{border-color:#0033FF;}
 p1{font-family:fantasy;}
 
 
