--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ p1{font-family:fantasy;}
 <br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height=40px></a>
 <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height=40px></a>
 </p1>
-<script type="text/javascript">
-document.getElemenById('contoh').innerHTML="fikrifikrifikrifikri";
+<hr color=#0033FF>
+<p align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
 
 </body>
