--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body{
 
 #fotoprofil{border-color:#0066FF;}
 p1{font-family:fantasy;}
+.hakcipta {font-size:12px;}
 
 
 </style>
@@ -36,8 +37,8 @@ p1{font-family:fantasy;}
 <br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height=40px></a>
 <a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height=40px></a>
 </p1>
-<hr color=#0033FF>
-<p align="center">copyright &copy;fikri mulyana setiawan</p>
+<hr color=black>
+<p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
 
 </body>
