--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ p1{font-family:fantasy;}
 <body>
 <header>
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
-</header>
+</header><br/>
+<a href="Calculus.html">Blog Matematika|</a><br/>
+<a href="relativitaskhusus.html">Blog Fisika|</a>
+<hr color="black">
 
 
 <h2 align="center"><em><strong>tentang developer:</strong></em></h2>
