--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p1{font-family:fantasy;}
 <header>
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header><br/>
-<a href="Calculus.html">Blog Matematika|</a><br/>
+<a href="Calculus.html">Blog Matematika|</a>
 <a href="relativitaskhusus.html">Blog Fisika|</a>
 <hr color="black">
 
