--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ p1{font-family:fantasy;}
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header><br/>
 <a href="Calculus.html">Blog Matematika|</a>
-<a href="relativitaskhusus.html">Blog Fisika|</a>
+<a href="Relativitaskhusus.html">Blog Fisika|</a>
 <hr color="black">
 
 
