--- a/Relativitaskhusus.html
+++ b/Relativitaskhusus.html
@@ -85,12 +85,12 @@ skala Observatorium Angkatan Laut AS, jam terbang kehilangan 59 ns selama
 perjalanan ke timur dan naik 273 ns selama perjalanan ke barat" .ya,beda waktu nya cuma dalam satuan nanosekon,tapi itu eksperimen yang cukup untuk membuktikan dilatasi waktu.</p>
 <p>jadi waktu di suatu tempat memang bisa melambat terhadap waktu di tempat lain,fenomena ini disebut dilatasi waktu.sekian penjelasan untuk kali ini,terimakasih atas perhatiannya.</p>
 
-<p><br>referensi:</br></p>
+<b><p>referensi:</p>
 <ul>
 <li>Introduction to classical mechanics;David Morin</li>
 <li>Fundamental of physics;Halliday&Resnick</li>
 <li>The Feynman Lectures On Physics;Feynman-Leighton-Sands</li>
-</ul>
+</ul></b>
 </section>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
