--- a/index.html
+++ b/index.html
@@ -29,17 +29,10 @@ p1{font-family:fantasy;}
 <hr color="black">
 
 
-<h2 align="center"><em><strong>tentang developer:</strong></em></h2>
+<h2 align="center"><em><strong>tentang About Me:</strong></em></h2>
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
 <br>
-<p1 align="left">Nama:Fikri Mulyana Setiawan
-<br>Sekolah:SMAN NEGERI 4 PADANG
-<br>Hobi:coding,belajar fisika
-<br><strong>contact:</strong>
-<p id="contoh"></p>
-<br><a href="https://www.instagram.com/fikrimulyana_s/"><img src="images.jpeg" height=40px></a>
-<a href="mailto:fikrimulyanasetiawan@gmail.com"><img src="images (1).jpeg" height=40px></a>
-</p1>
+<p><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(expert).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.untuk berkomunikasi dengan fikri,silakan klik logo email dan instagram di bawah</em></p>
 <hr color=black>
 <p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
