--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ p1{font-family:fantasy;}
 <hr color="black">
 
 
-<h2 align="center"><em><strong>tentang About Me:</strong></em></h2>
+<h2 align="center"><em><strong>About Me:</strong></em></h2>
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
 <br>
 <p align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(expert).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
