--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="icon" href="Free_Sample_By_Wix (1).jpeg">
+<link rel="icon" href="logo.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>website fikri mulyana setiawan</title>
