--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>website fikri mulyana setiawan</title>
+<link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <style>
 a{text-decoration:none;}
@@ -27,12 +28,19 @@ p1{font-family:fantasy;}
 <a href="Calculus.html">Blog Matematika|</a>
 <a href="Relativitaskhusus.html">Blog Fisika|</a>
 <hr color="black">
+<div class="container">
+    <div class="content">
+      <img src="slide1.jpg" alt="foto" width="340"/>
+      <img src="slide2.JPG" alt="foto" width="340" />
+      <img src="slide3.JPG" alt="foto" width="340" />
+    </div>
+</div>
 
 
 <h2 align="center"><em><strong>About Me:</strong></em></h2>
 <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" height=250px /></p>
 <br>
-<p align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(expert).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
+<p align="center"><em>Fikri Mulyana Setiawan adalah seorang siswa,web developer,dan (calon) programmer.Ia sangat antusias ketika menemukan hal yang menantang,seperti teka-teki,dan tentu saja subjek matematika dan fisika.Ia sekarang duduk di bangku SMA kelas XII.Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic),javascript(basic),dan juga python(intermediate).selain seorang (calon) programmer,fikri juga seorang (calon) fisikawan.</em></p>
 <hr color=black>
 <p class="hakcipta" align="center">copyright &copy;fikri mulyana setiawan</p>
 </script>
