--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ p1{font-family:fantasy;}
       <img src="slide1.jpg" alt="foto" width="340"/>
       <img src="slide2.JPG" alt="foto" width="340" />
       <img src="slide3.JPG" alt="foto" width="340" />
+      <img src="machinelearning.jpg" alt="foto" width="340" />
     </div>
 </div>
 
