--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="logo.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>website fikri mulyana setiawan</title>
+<title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
 <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <style>
