--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ p1{font-family:fantasy;}
 <a href="Relativitaskhusus.html">Blog Fisika |</a>
 <a href="Contact-me.html">kontak|</a>
 <hr color="black">
+<h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
     <div class="content">
       <img src="slide1.jpg" alt="foto" width="340"/>
