--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ p1{font-family:fantasy;}
 </header><br/>
 <a href="Calculus.html">Blog Matematika |</a>
 <a href="Relativitaskhusus.html">Blog Fisika |</a>
-<a href="Contact-me.html">kontak|</a>
+<a href="computerscience.html">Computer science</a>
+<a href="Contact-me.html">kontak|</a> 
 <hr color="black">
 <h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
