--- a/computerscience.html
+++ b/computerscience.html
@@ -31,8 +31,8 @@
   <p>untuk latihan,coba konversi bilangan biner di bawah ke bentuk bilangan desimal</p><img src="latbiner.JPG" alt="lat" width="250"/>
   <hr />
   <p><b>referensi: <br />
-  <ul><li><a href="https://cs50.harvard.edu/x/2020/"> Harvard Computer Science OpenCourseWare </a></b></p></li>
-  <li><a href="https://ocw.mit.edu/index.htm">MIT OpenCourseWare</a></li>
+  <ul><li><a href="https://cs50.harvard.edu/x/2020/"> Harvard Computer Science OpenCourseWare </a></b></li>
+  <li><a href="https://ocw.mit.edu/index.htm">MIT OpenCourseWare</a></li></p>
   </ul>
   <hr />
   <p align="center">copyright &copy; fikri mulyana setiawan </p>
