--- a/computerscience.html
+++ b/computerscience.html
@@ -32,7 +32,7 @@
   <hr />
   <p><b>referensi: <br />
   <ul><li><a href="https://cs50.harvard.edu/x/2020/"> Harvard Computer Science OpenCourseWare </a></b></li>
-  <li><a href="https://ocw.mit.edu/index.htm">MIT OpenCourseWare</a></li></p>
+  <li><b><a href="https://ocw.mit.edu/index.htm">MIT OpenCourseWare</a></li></b></p>
   </ul>
   <hr />
   <p align="center">copyright &copy; fikri mulyana setiawan </p>
