--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ p1{font-family:fantasy;}
 <header>
 <h1 align="center"><img src="1j+ojFVDOMkX9Wytexe43D6kifKBrBBLnBrIwXs1M3EMoAJtlSkrhfZt8...47"</h1>
 </header><br/>
-<a href="Calculus.html">Blog Matematika |</a>
-<a href="Relativitaskhusus.html">Blog Fisika |</a>
+<a href="Calculus.html">Matematika |</a>
+<a href="Relativitaskhusus.html">Fisika |</a>
 <a href="computerscience.html">Computer science |</a>
 <a href="Contact-me.html">kontak|</a> 
 <hr color="black">
