--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ p1{font-family:fantasy;}
 <a href="Calculus.html">Matematika |</a>
 <a href="Relativitaskhusus.html">Fisika |</a>
 <a href="computerscience.html">Computer science |</a>
-<a href="Contact-me.html">kontak|</a> 
+<a href="CaesarCipher.html">My JavaScript Project |</a>
+<a href="Contact-me.html">kontak |</a>  
 <hr color="black">
 <h2 align="center"><em><b>Content:</b></em></h2>
 <div class="container">
