--- a/CaesarCipher.html
+++ b/CaesarCipher.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>fikri</title>
+    <title>Caesar Cipher | enkripsi pesan ala julius caesar</title>
     <script type="text/javascript" charset="utf-8" src="CaesarCipher.js">
     </script>
     
