--- a/CaesarCipher.html
+++ b/CaesarCipher.html
@@ -19,7 +19,7 @@
   
   <label class="teks"><b>Pergeseran:</b><br />
   <textarea placeholder="isi menggunakan angka..." height="128" type="text"  id="pergeseran"  ></textarea></label><br /> <br />
-   <button  class="tombol"  onclick="encryption()" >Enkripsi</button>
+   <button  class="tombol"  onclick="encryption()" ><b>Enkripsi</b></button>
   <p class="teks">Hasil:</p>
   <textarea readonly rows="10" cols="30" width="240" placeholder="bagian ini tidak diisi..." id="out"></textarea> 
 </div>
