--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <link rel="icon" href="logo.png">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport">
 <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
-<link rel="stylesheet" type="text/css" href="style.css">  
+<link rel="stylesheet" type="text/css" href="C.css">  
 </head>
 <style>
 a{text-decoration:none;}
