--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="icon" href="logo.png">
+<link rel="icon" href="logo.png" height=250px>
 <meta charset="utf-8">
 <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
 <link rel="stylesheet" type="text/css" href="C.css">  
